change checkout page alignment issues

--- a/public/sass/pages/_checkout.scss
+++ b/public/sass/pages/_checkout.scss
@@ -1,4 +1,4 @@
-// Checkout
+// Checkout 
 .checkout-progress-bar {
 	padding: 4.7rem 0 4.7rem;
 	font-size: 0;
@@ -765,7 +765,10 @@ input[type="radio"]{
 	border-color: red;
 	background-color: red;
 }
-@media(max-width:700px){
+.checkout-steps{
+	padding-left: 0;
+}
+@media(max-width:768px){
 .shipingBox{
 	margin-bottom: 25px;
 }
@@ -775,10 +778,21 @@ input[type="radio"]{
 .order-box{
 	margin-left: 0;
 }
+.checkout-steps{
+	padding-left: 10px;
+	padding-right: 10px;
+}
 }
 @media(max-width: 576px) {
 	.checkout-container .order-summary {
 		padding-left: 2rem;
 		padding-right: 2rem;
+	}
+}
+
+@media (max-width:480px) {
+	.checkout-progress-bar {
+		margin-bottom: 1.4rem;
+		margin-top: 6.4rem;
 	}
 }
